apache+modsecurity fixes

--- a/net/modsecurity/Makefile
+++ b/net/modsecurity/Makefile
@@ -44,8 +44,11 @@ define Package/modsecurity/description
 endef
 
 define Package/modsecurity/install
-	$(INSTALL_DIR) $(1)/usr/lib
-	$(CP) $(PKG_INSTALL_DIR)/usr/lib/mod_security2.so $(1)/usr/lib/
+	$(INSTALL_DIR) $(1)/usr/lib/apache/modules
+	$(CP) $(PKG_INSTALL_DIR)/usr/lib/apache/modules/mod_security2.so $(1)/usr/lib/apache/modules
+	$(INSTALL_DIR) $(1)/etc/apache
+	$(CP) ./files/mod_security.conf $(1)/etc/apache
+	$(INSTALL_DIR) $(1)/etc/apache/modsecurity.d/activated_rules
 endef
 
 $(eval $(call BuildPackage,modsecurity))
