--- a/net/modsecurity/files/mod_security.conf
+++ b/net/modsecurity/files/mod_security.conf
@@ -1,7 +1,7 @@
-LoadModule security2_module modules/mod_security2.so
+LoadModule security2_module /usr/lib/apache/mod_security2.so
 
 <IfModule !mod_unique_id.c>
-    LoadModule unique_id_module modules/mod_unique_id.so
+    LoadModule unique_id_module /usr/lib/apache/mod_unique_id.so
 </IfModule>
 <IfModule mod_security2.c>
     # ModSecurity Core Rules Set configuration
@@ -45,13 +45,13 @@ LoadModule security2_module modules/mod_security2.so
             "id:'200004',phase:2,t:none,deny,msg:'ModSecurity internal error flagged: %{MATCHED_VAR_NAME}'"
 
     SecResponseBodyAccess Off
-    SecDebugLog /var/log/httpd/modsec_debug.log
+    SecDebugLog /var/log/modsec_debug.log
     SecDebugLogLevel 0
     SecAuditEngine RelevantOnly
     SecAuditLogRelevantStatus "^(?:5|4(?!04))"
     SecAuditLogParts ABIJDEFHZ
     SecAuditLogType Serial
-    SecAuditLog /var/log/httpd/modsec_audit.log
+    SecAuditLog /var/log/modsec_audit.log
     SecArgumentSeparator &
     SecCookieFormat 0
     SecTmpDir /var/lib/mod_security
